--- a/package.json
+++ b/package.json
@@ -3,24 +3,33 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postbuild": "ng  build --aot --prod --output-hashing none"
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~0.901.7",
     "@angular/animations": "~9.1.9",
+    "@angular/cdk": "^9.2.4",
+    "@angular/cli": "~9.1.7",
     "@angular/common": "~9.1.9",
     "@angular/compiler": "~9.1.9",
+    "@angular/compiler-cli": "~9.1.9",
     "@angular/core": "~9.1.9",
     "@angular/forms": "~9.1.9",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "express": "^4.17.1",
     "rxjs": "~6.5.4",
+    "rxjs-compat": "^6.6.0",
     "tslib": "^1.10.0",
+    "typescript": "~3.8.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -40,7 +49,10 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "tslint": "~6.1.0"
+  },
+  "engines": {
+    "node": "12.16.3",
+    "npm": "6.14.5"
   }
 }
